--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "kebab-case",
+  "name": "labecommerce-backend",
   "version": "1.0.0",
   "description": "aula back-end 1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./build/index.js"
+    "start": "tsc && node ./build/index.js",
+    "dev": "ts-node-dev src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,13 @@
   },
   "homepage": "https://github.com/Francinaldapmfaria/labecommerce-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
