--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/knex": "^0.16.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.4",
     "ts-node-dev": "^2.0.0"
   }
 }
